...
                                    </button>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BwJ-Mg-30x">
                                        <rect key="frame" x="0.0" y="360" width="320" height="30"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4WG-NQ-LXy">
                                                <rect key="frame" x="0.0" y="0.0" width="106.5" height="30"/>
                                                <state key="normal" title="Dismiss"/>
                                                <connections>
                                                    <segue destination="eIv-de-rVM" kind="unwind" unwindAction="unwindOCAAVC:" id="mEL-jw-sCL"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PZf-Zb-C3F">
                                                <rect key="frame" x="106.5" y="0.0" width="107" height="30"/>
...
                                                <connections>
                                                    <segue destination="yT3-yc-7EU" kind="show" id="qhq-9V-haj"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u9H-Th-37B">
                                                <rect key="frame" x="213.5" y="0.0" width="106.5" height="30"/>
                                                <state key="normal" title="Present"/>
                                                <connections>
                                                    <segue destination="yT3-yc-7EU" kind="presentation" id="Wb9-jM-Hea"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
